# anki_card_generator

./: .dockerignore  .gitignore  Dockerfile  README.md  anki_card_generator.py  docker-compose.yml  evaluator.py  pyproject.toml  requirements.txt  setup.py  test_pipeline.py
calibre-plugin/: README.md  __init__.py  build.sh  config.py  plugin-import-name-anki_forge.txt  ui.py
examples/: example01.json  example_output.json  levinas_totality_and_infinity.epub
src/anki_forge/: __init__.py  cli.py
src/anki_forge/chunking/: __init__.py  base.py  paragraph.py  semantic.py  sliding_window.py
src/anki_forge/core/: __init__.py  config.py  exceptions.py  models.py  parsing.py
src/anki_forge/generation/: __init__.py  base.py  batch.py  cache.py  card_generator.py  gemini.py  ollama.py  openai.py  openrouter.py
src/anki_forge/generation/prompts/: __init__.py  templates.py
src/anki_forge/output/: __init__.py  anki_csv.py  json_export.py
src/anki_forge/parsers/: __init__.py  base.py  epub.py  mobi.py  pdf.py
src/anki_forge/tui/: __init__.py  dashboard.py  dashboard_app.py  wizard.py
src/anki_forge/validation/: __init__.py  cloze_engine.py  cloze_validator.py  quality_gates.py
tests/: __init__.py  test_chunking.py  test_cloze_engine.py  test_models.py  test_parsers.py
