[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-forge"
version = "0.1.0"
description = "Generate Anki flashcards from EPUB, MOBI, and PDF documents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Logan Rooks"}
]
keywords = ["anki", "flashcards", "epub", "pdf", "spaced-repetition", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "requests>=2.28",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
semantic = ["sentence-transformers>=2.2"]
all = [
    "openai>=1.0",
    "sentence-transformers>=2.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
anki-forge = "anki_forge.cli:main"

[project.urls]
Homepage = "https://github.com/loganrooks/anki_card_generator"
Repository = "https://github.com/loganrooks/anki_card_generator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
