[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-forge"
version = "0.3.0"
description = "Generate Anki flashcards from EPUB and PDF documents using LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Logan Rooks"}
]
keywords = ["anki", "flashcards", "epub", "pdf", "spaced-repetition", "llm", "gemini", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "requests>=2.28",
    "rich>=13.0",  # Enhanced CLI output
]

[project.optional-dependencies]
# LLM providers
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.3"]
# PDF support
pdf = ["pymupdf>=1.23"]
# Semantic chunking
semantic = ["sentence-transformers>=2.2"]
# TUI components
tui = [
    "textual>=0.40",      # Full dashboard TUI
    "questionary>=2.0",   # Interactive wizard prompts
]
# Install all providers and features
all = [
    "openai>=1.0",
    "google-generativeai>=0.3",
    "pymupdf>=1.23",
    "sentence-transformers>=2.2",
    "textual>=0.40",
    "questionary>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
anki-forge = "anki_forge.cli:main"

[project.urls]
Homepage = "https://github.com/loganrooks/anki_card_generator"
Repository = "https://github.com/loganrooks/anki_card_generator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common in Click)
    "SIM108", # ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["anki_forge"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
